--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile('com.mikepenz:materialdrawer:5.1.1@aar') {
+        transitive = true
+    }
+
 }
