--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity"
-            android:label="Пятрушечка">
+            android:label="Settings">
+
+        </activity>
+        <activity android:name=".AboutActivity"
+            android:label="About">
 
         </activity>
     </application>
