--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
     compile('com.mikepenz:materialdrawer:5.1.1@aar') {
         transitive = true
     }
 
+
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.android.support:support-v4:23.2.0'
 }
