--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,7 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.1.1@aar') {
         transitive = true
     }
-
-
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.android.support:support-v4:23.0.2'
