add account.java add account layout add onClick(image)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@ package="com.dreamteam.organizeyourday">
         android:label="Settings">
 
     </activity>
+    <activity android:name=".Account"
+        android:label="Account">
+
+    </activity>
 
 </application>
 
