--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile('com.mikepenz:materialdrawer:5.1.1@aar') {
         transitive = true
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.android.support:support-v4:23.0.2'
+    compile 'com.android.support:cardview-v7:23.2.0'
 }
