--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@ package="com.dreamteam.organizeyourday">
 
     </activity>
 
+    <activity android:name=".Notifications"
+        android:label="Notifications">
+
+    </activity>
+
 </application>
 
 </manifest>
