--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.1.1@aar') {
         transitive = true
     }
+    compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.android.support:support-v4:23.0.2'
+    compile 'com.android.support:support-v4:23.2.0'
     compile 'com.android.support:cardview-v7:23.2.0'
 }
