--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,24 +20,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AboutActivity"
-            android:label="@string/about_name"
-            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert"></activity>
+        android:name=".AboutActivity"
+        android:label="@string/about_name"
+        android:theme="@style/Theme.AppCompat.Light.Dialog.Alert"/>
         <activity
             android:name=".EditCardActivity"
-            android:label="EditCard"></activity>
+            android:label="EditCard"/>
         <activity
             android:name=".SettingsActivity"
-            android:label="Settings"></activity>
+            android:label="Settings"/>
         <activity
             android:name=".Account"
-            android:label="Account"></activity>
+            android:label="Account"/>
         <activity
             android:name=".TimeNotification"
-            android:label="TimeNotifications"></activity>
+            android:label="TimeNotifications"/>
         <activity
             android:name=".DataBase.DataBaseTest"
-            android:label="DataBase"></activity>
+            android:label="DataBase"/>
 
         <receiver android:name=".Notifications" />
 
