--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
 
 
-        <receiver android:name=".Notifications" />
+        <receiver android:name=".Notification.Notifications" />
 
         <activity android:name=".AddNewCardActivity"
             android:windowSoftInputMode="adjustPan">
